@@ -61,7 +61,6 @@ public:
 	 *  help with debugging.
 	 */
 	virtual std::string technical_summary () const;
-	virtual std::string information () const = 0;
 	virtual void as_xml (xmlpp::Node *) const;
 	virtual Time full_length () const = 0;
 	virtual std::string identifier () const;
