@@ -42,7 +42,6 @@ public:
 	void examine (boost::shared_ptr<Job>, bool calculate_digest);
 	std::string summary () const;
 	std::string technical_summary () const;
-	std::string information () const;
 	void as_xml (xmlpp::Node *) const;
 	Time full_length () const;
 
