@@ -1,5 +1,8 @@
 2015-01-07  c.hetherington  <cth@carlh.net>
 
+	* Display sample aspect ratio in video tab if the
+	source file declares it.
+
 	* Add a little more debugging for 99% hangs.
 
 2015-01-06  c.hetherington  <cth@carlh.net>
